--- a/Pang.vcxproj
+++ b/Pang.vcxproj
@@ -84,7 +84,7 @@
     <ClInclude Include="GameObjectManager.h" />
     <ClInclude Include="Defines.h" />
     <ClInclude Include="MainMenu.h" />
-    <ClInclude Include="PlayerPaddle.h" />
+    <ClInclude Include="PlayerShip.h" />
     <ClInclude Include="SplashScreen.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -95,8 +95,8 @@
     <ClCompile Include="GameBall.cpp" />
     <ClCompile Include="GameObjectManager.cpp" />
     <ClCompile Include="MainMenu.cpp" />
-    <ClCompile Include="Pang.cpp" />
-    <ClCompile Include="PlayerPaddle.cpp" />
+    <ClCompile Include="SpaceBoats.cpp" />
+    <ClCompile Include="PlayerShip.cpp" />
     <ClCompile Include="SplashScreen.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
