--- a/Pang.vcxproj.filters
+++ b/Pang.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="PlayerShip.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AIShip.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -75,6 +78,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SpaceBoats.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AIShip.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
